Modified even further