@@ -1,92 +1,171 @@
 package com.reflectiontest.springReflectionTest;
 
-import com.reflectiontest.springReflectionTest.services.ProductService;
 import com.reflectiontest.springReflectionTest.models.Product;
 import com.reflectiontest.springReflectionTest.repositories.ProductRepository;
-import com.reflectiontest.springReflectionTest.repositories.SearchHistoryRepository;
+import com.reflectiontest.springReflectionTest.services.ProductService;
 import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 
-import static org.mockito.Mockito.*;
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
+@ExtendWith(MockitoExtension.class)
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 public class ProductServiceTest {
 
     @Mock
     private ProductRepository productRepository;
 
-    @Mock
-    private SearchHistoryRepository searchHistoryRepository;
-
+    @InjectMocks
     private ProductService productService;
+
+    private Product laptop;
+    private Product mouse;
+    private Product headphones;
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
-        productService = new ProductService(productRepository, searchHistoryRepository);
-
-        when(productRepository.existsByName("Mouse")).thenReturn(true);
-        when(productRepository.existsByName("Laptop")).thenReturn(true);
-        when(productRepository.existsByName("Tablet")).thenReturn(true);
-        when(productRepository.existsByName("Smartphone")).thenReturn(true);
-        when(productRepository.findByName("Mouse")).thenReturn(Optional.of(new Product("Mouse", 25.0)));
-        when(productRepository.findByName("Laptop")).thenReturn(Optional.of(new Product("Laptop", 1200.0)));
-        when(productRepository.findByName("Keyboard")).thenReturn(Optional.of(new Product("Keyboard", 50.0)));
-        when(productRepository.findByName("Monitor")).thenReturn(Optional.of(new Product("Monitor", 300.0)));
-        when(productRepository.findByName("Headphones")).thenReturn(Optional.of(new Product("Headphones", 150.0)));
-
-        Map<String, Long> searchCounts = new LinkedHashMap<>();
-        searchCounts.put("Laptop", 5L);
-        searchCounts.put("Mouse", 3L);
-        searchCounts.put("Keyboard", 2L);
-        searchCounts.put("Headphones", 1L);
-        searchCounts.put("Monitor", 1L);
-        when(searchHistoryRepository.getSearchCounts()).thenReturn(searchCounts);
+        laptop = new Product("Laptop", 1200.00);
+        mouse = new Product("Mouse", 25.00);
+        headphones = new Product("Headphones", 150.00);
     }
 
     @Test
     @Order(1)
     void testGetProductDetails() {
-        assertEquals("Laptop", productService.getProductDetails(new Product("Laptop", 1200.0)).getName());
-        assertEquals("Mouse", productService.getProductDetails(new Product("Mouse", 25.0)).getName());
+        // Scenario 1: Product exists
+        when(productRepository.findByName("Laptop")).thenReturn(Optional.of(laptop));
+        assertEquals(laptop, productService.getProductDetails(laptop));
+
+        // Scenario 2: Product does not exist
+        when(productRepository.findByName("NonExistent")).thenReturn(Optional.empty());
+        assertNull(productService.getProductDetails(new Product("NonExistent", 0)));
+
+        // Scenario 3: Null input
         assertNull(productService.getProductDetails(null));
-        assertNull(productService.getProductDetails(new Product(null, 50.0)));
     }
 
     @Test
     @Order(2)
     void testIsProductCached() {
-        assertFalse(productService.isProductCached(new Product("Keyboard", 50.0)));
-        assertFalse(productService.isProductCached(new Product("Monitor", 300.0)));
-        assertTrue(productService.isProductCached(new Product("Mouse", 25.0)));
+        // Scenario 1: Product exists
+        when(productRepository.existsByName("Mouse")).thenReturn(true);
+        assertTrue(productService.isProductCached(mouse));
+
+        // Scenario 2: Product does not exist
+        when(productRepository.existsByName("Keyboard")).thenReturn(false);
+        assertFalse(productService.isProductCached(new Product("Keyboard", 50.00)));
+
+        // Scenario 3: Null input
         assertFalse(productService.isProductCached(null));
     }
 
     @Test
     @Order(3)
     void testAddAndCheckCache() {
-        assertTrue(productService.addAndCheckCache(new Product("Headphones", 150.0)));
-        assertTrue(productService.addAndCheckCache(new Product("Webcam", 75.0)));
+        // Scenario 1: Successfully add and check product
+        when(productRepository.existsByName("Headphones")).thenReturn(true);
+        assertTrue(productService.addAndCheckCache(headphones));
+
+        // Scenario 2: Null input
         assertFalse(productService.addAndCheckCache(null));
     }
 
     @Test
     @Order(4)
-    void testAddProductTwiceAndCheck() {
-        assertTrue(productService.addProductTwiceAndCheck(new Product("Tablet", 300.0)));
-        assertTrue(productService.addProductTwiceAndCheck(new Product("Smartphone", 800.0)));
+    void testFindProductsCheaperThan() {
+        // Scenario 1: Multiple products under price
+        List<Product> cheapProducts = Arrays.asList(mouse, headphones);
+        when(productRepository.findByPriceLessThan(100.00)).thenReturn(cheapProducts);
+
+        List<String> result = productService.findProductsCheaperThan(100.00);
+        assertEquals(2, result.size());
+        assertTrue(result.contains("Mouse"));
+        assertTrue(result.contains("Headphones"));
+
+        // Scenario 2: No products under price
+        when(productRepository.findByPriceLessThan(10.00)).thenReturn(Collections.emptyList());
+        assertTrue(productService.findProductsCheaperThan(10.00).isEmpty());
     }
 
     @Test
     @Order(5)
-    void testGetTopSearchedProducts() {
-        assertEquals(List.of("Laptop", "Mouse", "Keyboard"), productService.getTopSearchedProducts(3));
-        assertEquals(List.of("Laptop"), productService.getTopSearchedProducts(1));
-        assertEquals(List.of(), productService.getTopSearchedProducts(0));
-        assertEquals(List.of("Laptop", "Mouse", "Keyboard", "Headphones", "Monitor"), productService.getTopSearchedProducts(10));
+    void testFindProductsByNamePattern() {
+        // Scenario 1: Products matching pattern
+        List<Product> matchedProducts = Arrays.asList(
+                new Product("Keyboard", 50.00),
+                new Product("Headphones", 150.00)
+        );
+        when(productRepository.findProductsByNamePattern(".*key.*")).thenReturn(matchedProducts);
+
+        List<String> result = productService.findProductsByNamePattern("key");
+        assertEquals(2, result.size());
+        assertTrue(result.contains("Keyboard"));
+        assertTrue(result.contains("Headphones"));
+
+        // Scenario 2: No products matching pattern
+        when(productRepository.findProductsByNamePattern(".*non-existent.*")).thenReturn(Collections.emptyList());
+        assertTrue(productService.findProductsByNamePattern("non-existent").isEmpty());
+    }
+
+    @Test
+    @Order(6)
+    void testDeleteProductAndVerify() {
+        // Scenario 1: Successfully delete product
+        Product deleteTest = new Product("DeleteTest", 99.99);
+        when(productRepository.existsByName("DeleteTest")).thenReturn(false);
+
+        assertTrue(productService.deleteProductAndVerify(deleteTest));
+
+        // Verify repository methods were called
+        verify(productRepository).save(deleteTest);
+        verify(productRepository).deleteByName("DeleteTest");
+
+        // Scenario 2: Null input
+        assertFalse(productService.deleteProductAndVerify(null));
+    }
+
+    @Test
+    @Order(7)
+    void testIsProductInPriceRange() {
+        // Scenario 1: Product in price range
+        Product rangeTest = new Product("RangeTest", 75.00);
+        List<Product> productsInRange = Collections.singletonList(rangeTest);
+        when(productRepository.findByPriceBetween(50.0, 100.0)).thenReturn(productsInRange);
+
+        assertTrue(productService.isProductInPriceRange(rangeTest));
+
+        // Scenario 2: Product out of price range
+        Product outOfRangeTest = new Product("OutOfRangeTest", 200.00);
+        when(productRepository.findByPriceBetween(50.0, 100.0)).thenReturn(Collections.emptyList());
+
+        assertFalse(productService.isProductInPriceRange(outOfRangeTest));
+
+        // Scenario 3: Null input
+        assertFalse(productService.isProductInPriceRange(null));
+    }
+
+    @Test
+    @Order(8)
+    void testCountTotalProducts() {
+        // Scenario 1: Multiple products
+        List<Product> allProducts = Arrays.asList(laptop, mouse, headphones);
+        when(productRepository.findAll()).thenReturn(allProducts);
+
+        assertEquals(3, productService.countTotalProducts(3));
+
+        // Scenario 2: Limit less than total products
+        assertEquals(2, productService.countTotalProducts(2));
+
+        // Scenario 3: Zero limit
+        assertEquals(0, productService.countTotalProducts(0));
     }
 }
